// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions should be succes 1`] = `
Object {
  "type": "INVOICES_SUCCESS",
}
`;

exports[`actions should fetch 1`] = `
Object {
  "type": "INVOICES_FETCH",
}
`;
